criar string para titulo splash

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BECA-MOBILE-03-ANDROID---SQUAD-2</string>
+    <string name="title_splash">Moeda Digital</string>
 </resources>
